--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:fix": "eslint --fix src/**/*.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
